# bot

./: .pre-commit-config.yaml  Makefile  README.md  bot.plist  jlpt.py  pyproject.toml  requirements.txt  test_download.py
.github/workflows/: deploy.yml  publish.yml  python.yml
bot/: bot.py  chain.py  cli.py  llm.py  polish.py  qdrant.py  summarize.py  summary.py  translate.py  utils.py  yahoo_finance.py
bot/bot/: bot.py  echo.py  error.py  help.py  polish.py  summarize.py  ticker.py  translate.py  utils.py
bot/loaders/: __init__.py  html.py  httpx_bs.py  loader.py  pdf.py  ptt.py  singlefile_html.py  test_youtube_transcript.py  url.py  video_transcript.py  youtube_transcript.py
bot/tools/: __init__.py  meta_prompt.py  polish.py  summarize.py  translate.py  yahoo_finance.py
config/: default.json  wip.json
prompts/: fortune_teller.yaml
src/bot/: agent.py  bot.py  cache.py  cli.py  config.py  llm.py  model.py  openai.py  qdrant.py  service.py  utils.py  yahoo_finance.py
src/bot/agents/: __init__.py  client.py  default.py  fortune_teller.py  model.py  multi_agent.py  service.py  types.py
src/bot/agents/tools/: __init__.py  award.py  content_extractor.py  monster_hunter_weapon.py  mortgage.py  tarot.py  weblio.py  yahoo_finance.py
src/bot/ai/: __init__.py  fortune_teller.py  service.py
src/bot/ai/tools/: __init__.py
src/bot/bot/: bot.py  echo.py  summarize.py  youtube_search.py
src/bot/callbacks/: __init__.py  agent.py  echo.py  error.py  fate.py  file_notes.py  file_summary.py  format.py  generate_prompt.py  google_search.py  gpt.py  help.py  jlpt.py  learn_japanese.py  log.py  polish.py  product.py  recipe.py  reply.py  summarize.py  summarize_v2.py  summary.py  ticker.py  translate.py  trip.py  twse.py  utils.py  youtube_search.py
src/bot/cb/: __init__.py  google_search.py  help.py  log.py  polish.py  recipe.py  summarize.py  translate.py
src/bot/chains/: __init__.py  format.py  formater.py  formatter.py  keyword.py  notes.py  polish.py  polisher.py  product.py  qa.py  recipe.py  summarize.py  summary.py  translate.py  translation.py  utils.py
src/bot/chains/jlpt/: __init__.py  chain.py
src/bot/chains/jlpt/prompts/: jlpt_v2.py
src/bot/chains/learn_japanese/: __init__.py  learn_japanese.py  models.py
src/bot/chains/learn_japanese/prompts/: jlpt_v1.py  jlpt_v3.py
src/bot/chains/qa/: __init__.py  chain.py  prompt.py
src/bot/chains/summary/: __init__.py  chain.py  prompt.py
src/bot/loaders/: __init__.py  cloudscraper.py  html.py  httpx.py  pdf.py  pipeline.py  playwright.py  reel.py  singlefile.py  url.py  video_transcript.py  youtube.py  youtube_transcript.py  ytdlp.py
src/bot/loaders/v2/: __init__.py  cloudscraper.py  loader.py  pdf.py  singlefile.py  url.py  utils.py  youtube.py  ytdlp.py
src/bot/prompts/: __init__.py  jlpt_v3.py
src/bot/tools/: __init__.py  award.py  content_extractor.py  datetime.py  duckduckgo.py  google.py  meta_prompt.py  mh_job.py  mh_weapon.py  mortgage.py  polish.py  recipe.py  summarize.py  tarot.py  translate.py  weblio.py  yahoo_finance.py
src/bot/tools/openai_agents/: __init__.py
tests/: test_url.py  test_utils.py  test_youtube_transcript.py
tests/callbacks/: test_utils.py
tests/tools/: test_yahoo_finance.py
