[project]
name = "bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "cloudscraper>=1.2.71",
    "loguru>=0.7.2",
    "lxml>=5.3.0",
    "markdownify>=0.13.1",
    "openai>=1.52.0",
    "openai-whisper>=20240930",
    "pypdf>=5.0.1",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.6",
    "qdrant-client[fastembed]>=1.12.0",
    "telegraph>=2.2.0",
    "torch>=2.5.0",
    "yfinance>=0.2.46",
    "youtube-transcript-api>=0.6.2",
    "yt-dlp>=2024.10.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "toml>=0.10.2",
    "pip>=24.2",
]

[project.scripts]
bot = "bot.cli:main"

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
ignore_missing_imports = true
